# coilgun

./: README.md  requirements.txt  requirements_dev.txt  setup.cfg
examples/: GA_example.py  ODE_models.py  welcome.py
pi-script/: potentiometer-test.py
src/GA/: DNA.py  evolution.py  fitness.py  recorder.py  selection.py
src/cli/: evolve.py  load_objects.py  show_coil.py  visualise.py  visualize.py
src/coilgun/: coil.py  power_source.py  projectile.py
src/math_and_physics/: funcs.py
src/ode_models/: coilgun.py  inductance_models.py  simulation.py
src/simulation/: draw.py  projectile.py  simulate.py
src/utils/: constants.py  path.py
src/visualise/: coil.py  simulation.py
src/visualize/: simulation.py
templates/defaults/: coil_template.yaml  conf_ode_template.yaml  conf_template.yaml  dna_ode_template.yaml  dna_template.yaml  power_template.yaml  projectile_template.yaml  rules_ode_template.yaml  rules_template.yaml
tests/: conftest.py  timing.py
tests/test_GA/: conftest.py  test_DNA.py  test_evolution.py  test_mutation_rules.py  test_selection.py
tests/test_GA/templates/: test_template_DNA.yaml  test_template_rules.yaml
tests/test_coilgun/: conftest.py  test_coil.py  test_power_source.py
tests/test_ode_models/: conftest.py  test_coilgun_ode.py  test_inductance_models.py
tests/test_simulation/: conftest.py  test_simulate.py  test_simulation_data.py
tests/test_utils/: test_math.py  test_path.py
