[metadata]
name = coilgun
version = 0.0.1
license = "GNU General Public License v3.0"
description = Package to help develop a coilgun using a genetic algorithm
long_description = file: README.rst
author = Simon Paulsson

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires = 
    numpy
    matplotlib

[options.packages.find]
where=src